--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
+    "react-router-dom": "^5.1.2",
+    "typescript": "3.7.2",
+    "universal-cookie": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,5 +37,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "env-cmd": "^10.0.1",
+    "node-sass": "^4.13.0",
+    "react-scripts": "^3.2.0",
+    "sass-loader": "^8.0.0"
   }
 }
