--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "baseStructureReactTS",
   "dependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
@@ -22,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild":"mv build docs"
+    "prebuild":"rm -r docs",
+    "postbuild":"rename build docs"
   },
   "eslintConfig": {
     "extends": "react-app"
