--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prebuild":"rm -r docs",
-    "postbuild":"rename build docs"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.0",
     "react-scripts": "^3.2.0",
     "sass-loader": "^8.0.0"
