--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wanchai23chai.github.io/baseStructureReactTS",
   "dependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
@@ -24,7 +25,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "deploy-firebase":"npm run build && firebase deploy --only hosting:raykra"
+    "deploy-firebase": "npm run build && firebase deploy --only hosting:raykra"
   },
   "eslintConfig": {
     "extends": "react-app"
